	
	FIM NEWS -- history of (main) user-visible changes in FIM.

                Version 0.6-trunk

# (r1389)
 * If further arguments follow switch --help, individual help messages will be shown.
# (r1382)
 * Command 'goto' accepts multiple arguments; those after the first triggering a jump will be ignored.
# (r1379,r1380)
 * Command goto {'-/'|'+/'}[C] will jump to a file based on C (default 'S').
   If C is 's', to prev/next file with same directory name.
   If C is 'd', to prev/next file with directory name down the same hierarchy.
   If C is 'u', to prev/next file with directory name up the same hierarchy.
   If C is 'b', to prev/next file with same basename.
   If C is uppercase, to the prev/next file not matching the criteria.
# (r1381)
 * Accordingly, aliases 'next_file_dir_same', 'next_file_dir_other', 'next_file_dir_up',
   'next_file_dir_down', 'next_file_same_basename', 'prev_file_dir_same',
   'prev_file_dir_other', 'prev_file_dir_up' 'prev_file_dir_down' 'prev_file_same_basename'.
# (r1366)
 * fix: 'recording' command non functioning properly.
# (r1365)
 * fix: will not pop back last if calling recording 'stop' outside of recording mode.
 * fix: won't clear recorded list if calling recording 'start' multiple times.
# (r1359)
 * Specifying more than once any of -p -i - will issue a warning.
# (r1334,r1335)
 * New switch --verbose-interpreter to execute interpreter verbosely by setting adequately _debug_commands='ack'.
# (r1331,r1333)
 * Strings specified within single quotes will have single quotes escaped, just as double quotes.
   So that e.g.: '\'hello\'' equals "'hello'" and "\"hello\"" equals '"hello"'.
# (r1330,r1351,r1363)
 * Variable '_debug_commands' is now a string with several verbosity options.
# (r1323,r1325)
 * fix: misc for --offset, e.g. avoiding probing for external loader programs.
# (r1319)
 * --verbose-load option for verbose file loading.
# (r1317,r1321)
 * -C '_seek_magic=..' will now probe whole range of specified signature.